fixing cors create swagger with swaggo
